examples_k8s/namespace.yaml

# _   _
#| \ | | __ _ _ __ ___   ___  ___ _ __   __ _  ___ ___
#|  \| |/ _` | '_ ` _ \ / _ \/ __| '_ \ / _` |/ __/ _ \
#| |\  | (_| | | | | | |  __/\__ \ |_) | (_| | (_|  __/
#|_| \_|\__,_|_| |_| |_|\___||___/ .__/ \__,_|\___\___|
#                                |_|

---

apiVersion: v1
kind: Namespace
metadata:
  name: default
  #annotations:
  #  field.cattle.io/description: Default Namespace
  #  app: Kubernetes-Apps
  #clusterName: k8s-cluster
