examples_k8s/postgres-timescale.yaml
##  _____ _                               _      ____  ____
## |_   _(_)_ __ ___   ___  ___  ___ __ _| | ___|  _ \| __ )
##   | | | | '_ ` _ \ / _ \/ __|/ __/ _` | |/ _ \ | | |  _ \
##   | | | | | | | | |  __/\__ \ (_| (_| | |  __/ |_| | |_) |
##   |_| |_|_| |_| |_|\___||___/\___\__,_|_|\___|____/|____/
## 
##  based on PostgreSQL

## TimescaleDB - PostgreSQL++ for time series and events
## https://www.timescale.com/ + https://github.com/timescale/timescaledb-docker-ha + https://hub.docker.com/r/timescale/timescaledb-ha
## https://github.com/prometheus-community/postgres_exporter

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-timescaledb
  namespace: default
  labels:
    app: postgres-timescaledb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: postgres-timescaledb
  template:
    metadata:
      labels:
        app: postgres-timescaledb
    spec:
      #imagePullSecrets:
      #- name: regcred
      restartPolicy: Always
      containers:
      - name: timescaledb
        image: timescale/timescaledb-ha:pg15-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
          name: timescaledb
          protocol: TCP
        readinessProbe:
          exec:
            command: ["/bin/sh", "-c", "pg_isready -U postgres -h localhost -p 5432"]
          #tcpSocket:
          #  port: 5432
          initialDelaySeconds: 15
          periodSeconds: 120
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command: ["/bin/sh", "-c", "pg_isready -U postgres -h localhost -p 5432"]
          #tcpSocket:
          #  port: 3306
          initialDelaySeconds: 30
          periodSeconds: 120
          timeoutSeconds: 5
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.1"
          limits:
            memory: "1Gi"
            cpu: "1.0"
        volumeMounts:
        - name: postgres-timescaledb-data
          #subPath: data
          mountPath: /home/postgres/pgdata/  # not working: /home/postgres/pgdata/data
        - name: postgres-timescaledb-db-file-sh-exporter
          subPath: 20_exporter-user.sh
          mountPath: /docker-entrypoint-initdb.d/20_exporter-user.sh
          readOnly: true
      - name: exporter
        image: prometheuscommunity/postgres-exporter:latest
        ports:
        - containerPort: 9187
          name: exporter
          protocol: TCP
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.1"
          limits:
            memory: "256Mi"
            cpu: "0.5"
      volumes:
        - name: postgres-timescaledb-data
          persistentVolumeClaim:
            claimName: postgres-timescaledb-data
        - name: postgres-timescaledb-db-file-sh-exporter
          configMap:
            name: postgres-db-file-sh-exporter

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-timescaledb
  namespace: default
  labels:
    app: postgres-timescaledb
spec:
  type: ClusterIP    # default: "ClusterIP" , set to "NodePort" for access over external-ip (not recommended)
  ports:
  - name: "timescaledb"
    protocol: TCP
    port: 5432
    targetPort: 5432
    #nodePort: 35432
  - name: "exporter"
    protocol: TCP
    port: 9187
    targetPort: 9187
  selector:
    app: postgres-timescaledb
