examples_k8s/postgres.yaml
##  ____           _                 ____   ___  _          __  ____           _    ____ ___ ____
## |  _ \ ___  ___| |_ __ _ _ __ ___/ ___| / _ \| |        / / |  _ \ ___  ___| |_ / ___|_ _/ ___|
## | |_) / _ \/ __| __/ _` | '__/ _ \___ \| | | | |       / /  | |_) / _ \/ __| __| |  _ | |\___ \
## |  __/ (_) \__ \ || (_| | | |  __/___) | |_| | |___   / /   |  __/ (_) \__ \ |_| |_| || | ___) |
## |_|   \___/|___/\__\__, |_|  \___|____/ \__\_\_____| /_/    |_|   \___/|___/\__|\____|___|____/
##                    |___/

## PostgreSQL - object-relational database (SQL)
## https://www.postgresql.org/ + https://github.com/postgres/postgres + https://hub.docker.com/_/postgres
## https://postgis.net/ + https://github.com/postgis/postgis + https://hub.docker.com/r/postgis/postgis
## https://github.com/prometheus-community/postgres_exporter

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: default
  labels:
    app: postgres
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      #imagePullSecrets:
      #- name: regcred
      restartPolicy: Always
      containers:
      - name: postgres
        image: postgres:15-alpine
        #image: postgis/postgis:15-3.4-alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
          name: postgres
          protocol: TCP
        readinessProbe:
          exec:
            command: ["/bin/sh", "-c", "pg_isready -U postgres -h localhost -p 5432"]
          #tcpSocket:
          #  port: 5432
          initialDelaySeconds: 15
          periodSeconds: 120
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command: ["/bin/sh", "-c", "pg_isready -U postgres -h localhost -p 5432"]
          #tcpSocket:
          #  port: 3306
          initialDelaySeconds: 30
          periodSeconds: 120
          timeoutSeconds: 5
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.1"
          limits:
            memory: "1Gi"
            cpu: "1.0"
        volumeMounts:
        - name: postgres-data
          subPath: data
          mountPath: /var/lib/postgresql/data/
        - name: postgres-db-file-sh-exporter
          subPath: 20_exporter-user.sh
          mountPath: /docker-entrypoint-initdb.d/20_exporter-user.sh
          readOnly: true
      - name: exporter
        image: prometheuscommunity/postgres-exporter:latest
        ports:
        - containerPort: 9187
          name: exporter
          protocol: TCP
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.1"
          limits:
            memory: "256Mi"
            cpu: "0.5"
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
        - name: postgres-db-file-sh-exporter
          configMap:
            name: postgres-db-file-sh-exporter

---

apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: default
  labels:
    app: postgres
spec:
  type: ClusterIP    # default: "ClusterIP" , set to "NodePort" for access over external-ip (not recommended)
  ports:
    - name: "postgres"
      protocol: TCP
      port: 5432
      targetPort: 5432
      #nodePort: 35432
    - name: "exporter"
      protocol: TCP
      port: 9187
      targetPort: 9187
  selector:
    app: postgres
