examples_k8s/redis.yaml
##  ____          _ _
## |  _ \ ___  __| (_)___
## | |_) / _ \/ _` | / __|
## |  _ <  __/ (_| | \__ \
## |_| \_\___|\__,_|_|___/
## 

## Redis - in-memory data structure store, used as a database, cache, and message broker
## https://redis.io/ + https://github.com/redis/redis
## https://hub.docker.com/_/redis + https://github.com/docker-library/redis
## Exporter: https://github.com/oliver006/redis_exporter

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: default
  labels:
    app: redis
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      #imagePullSecrets:
      #- name: regcred
      restartPolicy: Always
      containers:
      - name: redis
        image: redis:alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
          name: redis
          protocol: TCP
        args: ["sh", "-c", "exec redis-server --appendonly no --save 60 1000 --loglevel warning --requirepass $(REDIS_PASSWORD)"]
        #args: ["sh", "-c", "exec redis-server --appendonly no --save 60 1000 --loglevel warning"]
        readinessProbe:
          #tcpSocket:
          #  port: redis
          exec:
            command: ["/bin/sh", "-c", "exec redis-cli -h localhost --no-auth-warning -a ${REDIS_PASSWORD} ping"]
            #command: ["/bin/sh", "-c", "exec redis-cli -h localhost ping"]
          initialDelaySeconds: 15
          periodSeconds: 120
          timeoutSeconds: 5
          #failureThreshold: 4
          #successThreshold: 1
        livenessProbe:
          #tcpSocket:
          #  port: redis
          exec:
            command: ["/bin/sh", "-c", "exec redis-cli -h localhost --no-auth-warning -a ${REDIS_PASSWORD} ping"]
            #command: ["/bin/sh", "-c", "exec redis-cli -h localhost ping"]
          initialDelaySeconds: 30
          periodSeconds: 120
          timeoutSeconds: 5
          #failureThreshold: 4
          #successThreshold: 1
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.1"
          limits:
            memory: "1Gi"
            cpu: "1.0"
        volumeMounts:
        - mountPath: /data
          name: redis-data
      - name: exporter
        image: oliver006/redis_exporter:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9121
          name: exporter
          protocol: TCP
        args:
        - "--redis.addr=redis://localhost:6379"
        - "--redis.password=$(REDIS_PASSWORD)"
        #- "--skip-tls-verification=true"
        #- "--web.listen-address=:9121"
        #- "--web.telemetry-path=/metrics"
        #- "--debug=true"
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.1"
          limits:
            memory: "256Mi"
            cpu: "0.5"
      volumes:
      - name: redis-data
        persistentVolumeClaim:
          claimName: redis-data

---

apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: default
spec:
  type: ClusterIP    # default: "ClusterIP" , set to "NodePort" for access over external-ip (not recommended)
  ports:
    - name: "redis"
      protocol: TCP
      port: 6379
      targetPort: 6379
      #nodePort: 36379
    - name: "exporter"
      protocol: TCP
      port: 9121
      targetPort: 9121
  selector:
    app: redis
