examples_k8s/keycloak.yaml
##  _  __               _             _
## | |/ /___ _   _  ___| | ___   __ _| | __
## | ' // _ \ | | |/ __| |/ _ \ / _` | |/ /
## | . \  __/ |_| | (__| | (_) | (_| |   <
## |_|\_\___|\__, |\___|_|\___/ \__,_|_|\_\
##           |___/

## Keycloak - identity and access management solution
## https://www.keycloak.org/
## https://github.com/keycloak/keycloak
## https://hub.docker.com/r/jboss/keycloak + https://github.com/keycloak/keycloak/tree/main/quarkus/container
## Docs:
## * https://www.keycloak.org/guides + https://www.keycloak.org/documentation
## * Container: https://www.keycloak.org/server/containers
## * All configuration: https://www.keycloak.org/server/all-config
## * Features: https://www.keycloak.org/server/features
## Requirements: setup database (mariadb or other database) before start keycloak!

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: default
  labels:
    app: keycloak
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      #imagePullSecrets:
      #- name: regcred
      securityContext:
        fsGroup: 1000
      restartPolicy: Always
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:22.0
        #image: keycloak/keycloak:22.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /auth/health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 120
          timeoutSeconds: 3
          #failureThreshold: 4
          #successThreshold: 1
        livenessProbe:
          httpGet:
            path: /auth/health/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 120
          timeoutSeconds: 3
          #failureThreshold: 4
          #successThreshold: 1
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.1"
          limits:
            memory: "512Mi"
            cpu: "1.0"
        volumeMounts:
        - name: cacerts-jks
          subPath: cacerts.jks
          mountPath: /ssl/cacerts.jks
          readOnly: true
        - name: keycloak-ssl
          subPath: ssl.crt
          mountPath: /ssl/ssl.crt
          readOnly: true
        - name: keycloak-ssl
          subPath: ssl.key
          mountPath: /ssl/ssl.key
          readOnly: true
      volumes:
      - name: cacerts-jks
        secret:
          secretName: cacerts-jks
          defaultMode: 420 # decimal equivalent of octal 0644
          optional: true
      - name: keycloak-ssl
        secret:
          secretName: keycloak-ssl-secret
          defaultMode: 420 # decimal equivalent of octal 0644
          optional: true

---

apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: default
  labels:
    app: keycloak
spec:
  type: ClusterIP    # default: "ClusterIP" , set to "NodePort" for access over external-ip (not recommended)
  ports:
    - name: "http"
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: "https"
      protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    app: keycloak

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: default
  labels:
    app: keycloak
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
  tls:
  - hosts:
    - example.com
    secretName: ingress-tls-secret
  rules:
    - host: example.com
      http:
        paths:
        - path: /auth
          pathType: ImplementationSpecific
          backend:
            service:
              name: keycloak
              port:
                #name: http
                number: 8080
       
---

# secure metric url
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: default
  labels:
    app: keycloak
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
    #nginx.ingress.kubernetes.io/proxy-buffering: "on"
    #nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Keycloak'
spec:
  tls:
  - hosts:
    - example.com
    secretName: ingress-tls-secret
  rules:
    - host: example.com
      http:
        paths:
        - path: /auth/metrics
          pathType: Exact
          backend:
            service:
              name: keycloak
              port:
                #name: http
                number: 8080
