examples_k8s/mongo-express.yaml
##  _ __ ___   ___  _ __   __ _  ___         _____  ___ __  _ __ ___  ___ ___
## | '_ ` _ \ / _ \| '_ \ / _` |/ _ \ _____ / _ \ \/ / '_ \| '__/ _ \/ __/ __|
## | | | | | | (_) | | | | (_| | (_) |_____|  __/>  <| |_) | | |  __/\__ \__ \
## |_| |_| |_|\___/|_| |_|\__, |\___/       \___/_/\_\ .__/|_|  \___||___/___/
##                        |___/                      |_|

## mongo-express - Web-based MongoDB admin interface
## https://github.com/mongo-express/mongo-express
## https://hub.docker.com/_/mongo-express + https://github.com/mongo-express/mongo-express-docker

## Docs:
## https://github.com/mongo-express/mongo-express-docker#configuration
## https://github.com/mongo-express/mongo-express#usage-docker

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: default
  labels:
    app: mongo-express
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      #imagePullSecrets:
      #- name: regcred
      restartPolicy: Always
      containers:
      - name: mongo-express
        image: mongo-express:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
          name: mongo-express
          protocol: TCP
        readinessProbe:
          #exec:
          #  command: ["/bin/sh", "-c", "nc -zvn -w 3 localhost 8081 || exit 1"]
          tcpSocket:
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 120
          timeoutSeconds: 5
        livenessProbe:
          #exec:
          #  command: ["/bin/sh", "-c", "nc -zvn -w 3 localhost 8081 || exit 1"]
          tcpSocket:
            port: 9115
          initialDelaySeconds: 15
          periodSeconds: 120
          timeoutSeconds: 5
        resources:
          requests:
            memory: "256Mi"
            cpu: "0.1"
          limits:
            memory: "512Mi"
            cpu: "0.5"

---

apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: default
  labels:
    app: mongo-express
spec:
  type: ClusterIP
  ports:
    - name: "mongo-express"
      protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: mongo-express

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express
  namespace: default
  labels:
    app: mongo-express
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #cert-manager.io/cluster-issuer: ingress-tls-secret
    #cert-manager.io/acme-challenge-type: http01
    ## https://kubernetes.github.io/ingress-nginx/examples/auth/basic/
    #nginx.ingress.kubernetes.io/auth-type: basic
    #nginx.ingress.kubernetes.io/auth-secret: basic-auth
    #nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Mongo-Express'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - mongo-express.example.com
    secretName: ingress-tls-secret
  rules:
  - host: mongo-express.example.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: mongo-express
            port:
              #name: mongo-express
              number: 8081
